# decorator-kafka

./: .gitignore  LICENSE  README.md  pyproject.toml
decorator_kafka/: __init__.py  decorators.py  registry.py
examples/: simple_app.py
performans_kafka/: core.py
