[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decorator_kafka"
version = "0.1.0"
authors = [
{ name = "Poqo", email = "mustafabicer.iletisim@gmail.com" },
]
description = "High-Performance Decorator-Based Kafka Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = [
"aiokafka", 
]

[project.urls]
"Homepage" = "https://github.com/poqob/decorator_kafka"
"Bug Tracker" = "https://github.com/poqob/decorator_kafka/issues"